Version 1.3.0 release Check CHANGELOG for details